--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,259 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700&display=swap');
+
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* landing Page */
+
+.landing{
+  background-image: url("bg2.png");
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
+.landing .credit{
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  font-size: 5px;
+}
+
+.landing a{
+  text-decoration: none;
+  color: #000000;
+  margin-left: 5px;
+}
+
+.landing a:hover{
+  color: #ffffff;
+}
+
+.landing .start{
+  position: absolute;
+  top: 20%;
+  right: 20%;
+  text-align: right;
+}
+
+.landing h1,
+.landing p{
+  margin: 0;
+}
+
+.landing h1{
+  font-size: 50px;
+}
+
+.landing p{
+  font-size: 30.5px;
+  font-weight: 200;
+}
+
+.landing button{
+  font-size: 20px;
+  font-weight: 200;
+  background-color: #ffffff;
+  border: 3px solid #ffffff;
+  padding: 13px 27px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.landing button:hover{
+  border: 3px solid #ffffff;
+  background-color: transparent;
+  color: #ffffff;
+}
+
+.fa-chevron-right{
+  font-size: 18px;
+  margin-left: 10px;
+}
+
+.meme{
+  margin: 0 auto;
+  justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+/* Template Page */
+
+.templatePage,
+.editPage,
+.showPage{
+  max-width: 1000px;
+  margin: 0 auto ;
+  display: block;
+  padding: 0;
+}
+
+.template-header{
+  margin-left: 50px;
+}
+
+.template-header h1,
+.edit-header h1,
+.show-header h1{
+  font-size: 50px;
+  margin: 0;
+  padding-top: 50px;
+}
+
+.template-header p,
+.edit-header p,
+.show-header p{
+  font-size: 30px;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.meme-card{
+  display: flex;
+  padding-bottom: 0;
+  margin: 20px;
+}
+
+.meme-card p{
+  margin: 0;
+  text-align: center;
+}
+
+.meme-card img{
+  width: 170px; 
+  height: 170px; 
+  object-fit: cover; 
+  margin: 25px;
+  border-radius: 10px;
+  transition: .2s;
+}
+
+.meme-card img:hover{
+  box-shadow:
+  0 0.5px 3.6px rgba(0, 0, 0, 0.024),
+  0 1.5px 10px rgba(0, 0, 0, 0.035),
+  0 3.6px 24.1px rgba(0, 0, 0, 0.046),
+  0 12px 80px rgba(0, 0, 0, 0.07);
+  transform: scale(1.02);
+  cursor: pointer;
+}
+
+/* edit page */
+
+.back-btn{
+  padding: 10px 20px;
+  border: 2.5px solid #F986AA;
+  background-color: #F986AA;
+  margin-top: 50px;
+  color: #ffffff;
+}
+
+.back-btn:hover{
+  border: 2.5px solid #F986AA;
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.fa-arrow-left{
+  margin-right: 20px;
+}
+
+.edit-place{
+  width: 900px;
+  display: flex;
+  align-items: center;
+  margin-top: 70px;
+}
+
+.edit-input{
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+}
+
+input{
+  width: 250px;
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: 2.5px solid #F986AA;
+  background-color: #ffffff;
+  outline: none;
+}
+
+.edit-input button{
+  width: 295px;
+  padding: 10px 20px;
+  border: 2.5px solid #F986AA;
+  background-color: #F986AA;
+  margin-top: 10px;
+  color: #ffffff;
+}
+
+.edit-input button:hover{
+  border: 2.5px solid #F986AA;
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.top-text{
+  margin-top: 0;
+}
+
+.edit-img-name{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.edit-img-name img{
+  width: 250px;
+}
+
+/* show page */
+
+.showPage{
+  max-width: 900px;
+  margin: 0 auto ;
+  text-align: center;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.showPage img{
+  width: 300px; 
+}
+
+.new-meme{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.new-meme button{
+  width: 295px;
+  padding: 10px 20px;
+  margin: 60px;
+  border: 2.5px solid #F986AA;
+  background-color: #F986AA;
+  margin-top: 10px;
+  color: #ffffff;
+  font-size: 18px;
+  cursor: pointer;
+  
+}
+
+.new-meme button:hover{
+  border: 2.5px solid #F986AA;
+  background-color: #ffffff;
+  color: #000000;
+}
+
